--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
